Effective introduction/landing page

--- a/README.Rmd
+++ b/README.Rmd
@@ -18,7 +18,14 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of MovieDataCleaner is to ...
+`MovieDataCleaner` is an R package for **cleaning missing datasets** with **NMF imputation** and **kNN imputation**
+
+See `pkgdown` site here: [https://brucebuurstra.github.io/MovieDataCleaner/](https://brucebuurstra.github.io/MovieDataCleaner/)
+
+MovieDataCleaner easily:
+* drops rows and columns containg missing values
+* imputes missing values using NMF or kNN
+* clusters imputed datasets
 
 ## Installation
 
@@ -27,4 +34,8 @@ You can install the released version of MovieDataCleaner from [GitHub](https://g
 ``` r
 devtools::install_github("BruceBuurstra/MovieDataCleaner")
 ```
+
+See pkgdown site here:
+
+## Link to vignette
 
