fixed vignette reference error

--- a/vignettes/MovieDataCleanerVignette.Rmd
+++ b/vignettes/MovieDataCleanerVignette.Rmd
@@ -2,7 +2,7 @@
 title: "MovieDataCleaner"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{example}
+  %\VignetteIndexEntry{MovieDataCleaner}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
