fixed landing page bullet points

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,9 +23,10 @@ knitr::opts_chunk$set(
 See `pkgdown` site here: [https://brucebuurstra.github.io/MovieDataCleaner/](https://brucebuurstra.github.io/MovieDataCleaner/)
 
 MovieDataCleaner easily:
-* drops rows and columns containg missing values
-* imputes missing values using NMF or kNN
-* clusters imputed datasets
+
+- drops rows and columns containg missing values
+- imputes missing values using NMF or kNN
+- clusters imputed datasets
 
 ## Installation
 
