--- a/vignettes/MovieDataCleanerVignette.Rmd
+++ b/vignettes/MovieDataCleanerVignette.Rmd
@@ -7,7 +7,7 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-MovieDataCleaner is a package used to clean datasets, especially ones with large amounts of missing data. Missing data can often be an issue in larger datasets. This package is best suited for Movie datasets from MovieLens but can be used on any dataset. This package is able to impute missing values into a dataset using either kNN or NMF. If you wish to cluster your final dataset this packages also has the capability to do that using kmeans clustering.
+MovieDataCleaner is a package used to clean datasets, especially ones with large amounts of missing data. Missing data can often be an issue in larger datasets and can be found in almost any area of interest, not just movies, therefore dealing with missing data is a problem that one is likely to encounter. This package is best suited for Movie datasets from MovieLens but can be used on any dataset. This package is able to impute missing values into a dataset using either kNN or NMF. If you wish to cluster your final dataset this packages also has the capability to do that using kmeans clustering.
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
