fixed pkgdown misspelling

--- a/README.Rmd
+++ b/README.Rmd
@@ -24,7 +24,7 @@ See `pkgdown` site here: [https://brucebuurstra.github.io/MovieDataCleaner/](htt
 
 MovieDataCleaner easily:
 
-- drops rows and columns containg missing values
+- drops rows and columns containing missing values
 - imputes missing values using NMF or kNN
 - clusters imputed datasets
 
@@ -38,11 +38,17 @@ devtools::install_github("BruceBuurstra/MovieDataCleaner")
 
 ## kNN Imputation
 
-The `run_knn_imputation` imputes values into a dataset where there was missing values. 
+Below we have dataset with a lot of missing values and after running this function values have been imputed where they were.
 
 ```{r}
 library(MovieDataCleaner)
 load("C:/Users/bbuur/MovieDataCleaner/data/new_data.rdata")
+head(new_data, c(5,5))
+```
+
+The `run_knn_imputation` imputes values into a dataset where there was missing values. 
+
+```{r}
 knn_imputed <- run_knn_imputation(5, new_data)
 head(knn_imputed, c(5,5))
 ```
