changed theme, added to pkgdown site

--- a/README.Rmd
+++ b/README.Rmd
@@ -38,7 +38,7 @@ devtools::install_github("BruceBuurstra/MovieDataCleaner")
 
 ## kNN Imputation
 
-Below we have dataset with a lot of missing values and after running this function values have been imputed where they were.
+Below we have a dataset of movie ratings with a lot of missing values.
 
 ```{r}
 library(MovieDataCleaner)
@@ -53,7 +53,7 @@ knn_imputed <- run_knn_imputation(5, new_data)
 head(knn_imputed, c(5,5))
 ```
 
-We can also `round_to_movie_ratings` to make sure every value is rounded to a movie rating.
+We can also use `round_to_movie_ratings` to make sure every value is rounded to a movie rating.
 
 ```{r}
 knn_round <- sapply(knn_imputed, round_to_movie_rating)
